Fix ResultFolding template instantiation + overflow in CardOverlay
https://coveord.atlassian.net/browse/JSUI-862

--- a/sass/_CardOverlay.scss
+++ b/sass/_CardOverlay.scss
@@ -57,6 +57,7 @@
 }
 .coveo-card-overlay-body {
   overflow: auto;
+  overflow-x: hidden;
 }
 .coveo-card-overlay-footer {
   text-align: center;
